// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationTopbar render multiple bydeler correctly 1`] = `
<header
  class="oslo__navigation-topbar"
>
  <a
    class="oslo__navigation-topbar-button router-link-active"
    href="#/bydel/1-2-3-4"
  >
    <i
      class="material-icons oslo__topbar"
    >
      arrow_back
    </i>
     
    <h4
      class="oslo__topbar oslo__topbar-text"
    >
      Sammenligne bydeler
    </h4>
  </a>
   
  <div
    class="navigation-topbar"
  >
    <div
      class="navigation-topbar__select"
      id="select"
      tabindex="0"
    >
      <label
        class="label label--active"
      >
        Velg tema
      </label>
       
      <span>
        alder
      </span>
       
      <i
        class="material-icons"
      >
        arrow_drop_down
      </i>
    </div>
     
    <!---->
  </div>
</header>
`;

exports[`NavigationTopbar renders correctly 1`] = `
<header
  class="oslo__navigation-topbar"
>
  <a
    class="oslo__navigation-topbar-button router-link-active"
    href="#/"
  >
    <i
      class="material-icons oslo__topbar"
    >
      arrow_back
    </i>
     
    <h4
      class="oslo__topbar oslo__topbar-text"
    >
      Bydel Sagene
    </h4>
  </a>
   
  <div
    class="navigation-topbar"
  >
    <div
      class="navigation-topbar__select"
      id="select"
      tabindex="0"
    >
      <label
        class="label"
      >
        Velg tema
      </label>
       
      <span>
        
      </span>
       
      <i
        class="material-icons"
      >
        arrow_drop_down
      </i>
    </div>
     
    <!---->
  </div>
</header>
`;
